# ElephantArt

./: CMakeLists.txt  README.md
src/: ASCII.cc  ASCII.h  AlphaBetaSearch.cc  BitBoard.cc  BitBoard.h  Blas.cc  Blas.h  Board.cc  Board.h  CLInterface.h  CMLInterface.h  CPUBackend.cc  CPUBackend.h  CUDABackend.cc  CUDABackend.h  Cache.h  Decoder.cc  Decoder.h  Elephant.cc  Engine.cc  Engine.h  Evaluate.cc  Evaluate.h  FileSystem.cc  FileSystem.h  ForcedCheckmate.cc  ForcedCheckmate.h  Instance.cc  Instance.h  Model.cc  Model.h  Mutex.h  Network.cc  Network.h  NodePointer.h  PGNParser.cc  PGNParser.h  Position.cc  Position.h  Random.cc  (+35 more)
src/cuda/: CUDACommon.cc  CUDACommon.h  CUDAKernels.cu  CUDAKernels.h  CUDALayers.cc  CUDALayers.h
train/torch/: Network.py  chunkparser.py  config.py  loader.py  nnprocess.py  parser.py  symmetry.py  train.py  transfer.py
train/torch/example/: example.json
